# legacy-teo-gazebo

./: README.md  readme.md  teo.world
teo_description/robots/: teo.sdf
teo_meshes/: CMakeLists.txt  package.xml
teo_model/: model.config  readme.md  teo.sdf
