<?xml version="1.0"?>
<package>
  <name>teo_meshes</name>
  <version>0.0.1</version>

  <description> teo_meshes package
    This package contains the meshes for the implementation of TEO in Gazebo.

    RoboticsLab, University Carlos III of Madrid
  </description>

  <maintainer email="rauferna@ing.uc3m.es"> Raúl Fernández </maintainer> 
  <license>BSD</license>

  <url type="website">http://roboticslab.uc3m.es</url>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use build_depend for packages you need at compile time: -->
    <build_depend>urdf</build_depend>

  <!-- Use buildtool_depend for build tool packages: -->
    <buildtool_depend>catkin</buildtool_depend>

  <!-- Use run_depend for packages you need at runtime: -->
    <run_depend>urdf</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
